--- a/houdini-rs-experiment/src/app/app.component.html
+++ b/houdini-rs-experiment/src/app/app.component.html
@@ -14,5 +14,8 @@
         <input #greetInput id="greet-input" placeholder="Enter a name..." />
         <button type="submit">Greet</button>
     </form>
-    <p>{{ greetingMessage }}</p>
+    <p>{{ greetingMessage() }}</p>
+    <p>
+        Timer updated in rust: {{ timer() }}
+    </p>
 </div>
