chore(houdini-rs): encapsulate timer on the frontend using an rxjs Observable

--- a/houdini-rs-experiment/src/app/app.component.html
+++ b/houdini-rs-experiment/src/app/app.component.html
@@ -16,6 +16,6 @@
     </form>
     <p>{{ greetingMessage() }}</p>
     <p>
-        Timer updated in rust: {{ timer() }}
+        Timer updated in rust: {{ timer$ | async }}
     </p>
 </div>
